<?xml version="1.0"?>
<package format="3">
  <name>robomaze</name>
  <version>2.0.0</version>
  <description>Interactive 2D maze simulator for ROS2 - navigate Wall-E through the maze!</description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
